# lazyrecall

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/lazyrecall-core/: Cargo.toml
crates/lazyrecall-core/src/: discovery.rs  error.rs  index.rs  lib.rs  log.rs  parser.rs  summarizer.rs  summarizer_worker.rs  watcher.rs
crates/lazyrecall-tui/: Cargo.toml
crates/lazyrecall-tui/src/: app.rs  format.rs  input.rs  main.rs  theme.rs  ui.rs
crates/recall-core/: Cargo.toml
crates/recall-core/src/: discovery.rs  index.rs  lib.rs  parser.rs  summarizer_worker.rs  watcher.rs
crates/recall-tui/: Cargo.toml
crates/recall-tui/src/: main.rs
docs/: demo.tape
fixtures/: sample-session.jsonl
