[workspace]
members = ["crates/lazyrecall-core", "crates/lazyrecall-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Maxwell Collins"]
repository = "https://github.com/macollins27/lazyrecall"
homepage = "https://github.com/macollins27/lazyrecall"
readme = "README.md"
keywords = ["claude", "tui", "llm", "anthropic", "ai"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# cargo-dist: cross-platform binary releases on tag.
# Run `cargo dist generate` after editing this section to refresh the workflow.
[workspace.metadata.dist]
cargo-dist-version = "0.21.1"
ci = "github"
installers = ["shell", "homebrew"]
tap = "macollins27/homebrew-lazyrecall"
formula = "lazyrecall"
publish-jobs = ["homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
pr-run-mode = "plan"

[profile.dist]
inherits = "release"
lto = "thin"
