[package]
name = "lazyrecall-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lazyrecall"
path = "src/main.rs"

[dependencies]
lazyrecall-core = { path = "../lazyrecall-core" }
anyhow.workspace = true
tokio.workspace = true
ratatui = "0.28"
crossterm = "0.28"
